# radix64

./: .travis.yml  Cargo.toml  README.md  comparison.md
bench_results/: index.html
bench_results/no_simd/: cli_output.txt
bench_results/no_simd/decode_bench/3/report/: index.html
bench_results/no_simd/decode_bench/32/report/: index.html
bench_results/no_simd/decode_bench/64/report/: index.html
bench_results/no_simd/decode_bench/8192/report/: index.html
bench_results/no_simd/decode_bench/base64/report/: index.html
bench_results/no_simd/decode_slice_bench/4096/report/: index.html
bench_results/no_simd/decode_slice_bench/512/report/: index.html
bench_results/no_simd/decode_slice_bench/base64/report/: index.html
bench_results/no_simd/decode_with_buffer_bench/128/report/: index.html
bench_results/no_simd/decode_with_buffer_bench/3/report/: index.html
bench_results/no_simd/decode_with_buffer_bench/4096/report/: index.html
bench_results/no_simd/decode_with_buffer_bench/8192/report/: index.html
bench_results/no_simd/decode_with_buffer_bench/radix64/report/: index.html
bench_results/no_simd/display_bench/128/report/: index.html
bench_results/no_simd/display_bench/3/report/: index.html
bench_results/no_simd/display_bench/4096/report/: index.html
bench_results/no_simd/display_bench/512/report/: index.html
bench_results/no_simd/display_bench/8192/report/: index.html
bench_results/no_simd/display_bench/base64/report/: index.html
bench_results/no_simd/display_bench/report/: index.html
bench_results/no_simd/encode_bench/report/: index.html
bench_results/no_simd/encode_slice_bench/report/: index.html
bench_results/no_simd/encode_writer_bench/report/: index.html
bench_results/no_simd/report/: index.html
bench_results/with_avx2/: cli_output.txt
bench_results/with_avx2/decode_bench/report/: index.html
bench_results/with_avx2/decode_reader_bench/report/: index.html
bench_results/with_avx2/decode_slice_bench/report/: index.html
bench_results/with_avx2/decode_with_buffer_bench/report/: index.html
bench_results/with_avx2/encode_with_buffer_bench/report/: index.html
benches/: benches.rs
ci/: script.sh
examples/: io.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  roundtrip.rs
src/: config.rs  configs.rs  decode.rs  display.rs  encode.rs  io.rs  lib.rs  tables.rs  u6.rs
src/decode/: block.rs  io.rs
src/decode/block/: arch.rs
src/decode/block/arch/: other.rs  x86.rs
src/encode/: block.rs  io.rs
src/encode/block/arch/: other.rs  x86.rs
tests/: external_roundtrip.rs  tests.rs
(+2075 files in other folders)
