[package]
name = "radix64"
version = "0.6.2"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2021"
description = "A base64 library by another name"
repository = "https://github.com/ggriffiniii/radix64"
homepage = "https://github.com/ggriffiniii/radix64"
documentation = "https://docs.rs/radix64"
readme = "README.md"
keywords = ["base64", "encoding", "encode", "decoding", "decode"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
exclude = ["/ci/*", "/.travis.yml", "bench_results/*"]

[package.metadata.release]
no-dev-version = true

[features]
default = ["simd"]
simd = []

[dev-dependencies]
base64 = "0.10.1"
criterion = "0.2.11"
proptest = "0.9.4"
rand = "0.6.5"

[[bench]]
name = "benches"
harness = false

[profile.bench]
opt-level = 3
debug = true

[dependencies]
cfg-if = "0.1.9"
